Prevent sidebar from jumping (#333)

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -345,6 +345,7 @@ code-inner {
     list-style-type: none;
     text-overflow: ellipsis;
     padding-left: 0;
+    margin-bottom: 0 !important; // prevents flickering in stickySidebar
 }
 
 .nav-list-children>li {
